completed html for header section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
     <title>Miles's Web Design</title>
 </head>
 <body>
-  
+  <header> <!-- header -->
+    <div class="container">
+        <div id="branding">
+            <h1><span id="branding-name">Miles's</span> Web Design</h1>
+        </div>
+            <nav>
+                <ul>
+                    <li id="selected">
+                        <a href="#">Home</a>
+                    </li>
+                    <li>
+                        <a href="#">About</a>
+                    </li>
+                    <li>
+                        <a href="#">Services</a>
+                    </li>
+                </ul>
+            </nav>
+    </div>
+  </header>
 </body>
 </html>
