completed html for showcase and newsletter sections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Miles's Web Design</title>
 </head>
 <body>
-  <header> <!-- header -->
+    <header> <!-- header -->
     <div class="container">
         <div id="branding">
             <h1><span id="branding-name">Miles's</span> Web Design</h1>
@@ -24,14 +24,30 @@
                         <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#">About</a>
+                        <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#service">Services</a>
                     </li>
                 </ul>
             </nav>
     </div>
-  </header>
+    </header>
+    <section id="showcase"> <!-- showcase -->
+    <div class="container">
+        <h1>Quality web design at no price!™</h1>
+        <h3>You cannot purchase these services!</h3>
+        <p>Miles's Web Design is world-class <span id="aside">whatever that means... we exist in the world? That's quite a low bar</span> web design company with a team that creates award-winning websites which promote your brand and increase your revenue to help grow and improve your business, so <i>you</i> can win capitalism.</p>
+    </div>
+    </section>
+    <section id="newsletter"> <!-- Newsletter -->
+    <div class="container">
+        <h1>Subscribe To Our Newsletter</h1>
+        <form>
+            <input type="email" placeholder="Enter email address..." name="email">
+            <button class="btn-1">Subscribe</button>
+        </form>
+    </div>
+    </section>
 </body>
 </html>
