completed html for boxes section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Miles's Web Design</title>
 </head>
 <body>
-    <header> <!-- header -->
+    <header> <!-- Header -->
     <div class="container">
         <div id="branding">
             <h1><span id="branding-name">Miles's</span> Web Design</h1>
@@ -33,7 +33,7 @@
             </nav>
     </div>
     </header>
-    <section id="showcase"> <!-- showcase -->
+    <section id="showcase"> <!-- Showcase -->
     <div class="container">
         <h1>Quality web design at no price!™</h1>
         <h3>You cannot purchase these services!</h3>
@@ -47,6 +47,23 @@
             <input type="email" placeholder="Enter email address..." name="email">
             <button class="btn-1">Subscribe</button>
         </form>
+    </div>
+    </section>
+    <section id="boxes"> <!-- Boxes -->
+    <div class="container">
+        <div class="box">
+            <i class="fa-brands fa-html5"></i>
+            <h3>HTML5 Markup</h3>
+        </div>
+        <div class="box">
+            <i class="fa-brands fa-css3-alt"></i>
+            <h3>CSS3 Styling</h3>
+        </div>
+        <div class="box">
+            <i class="fa-brands fa-js"></i>
+            <h3>JavaScript Functionality</h3>
+        </div>
+        <p>We use HTML5, CSS3, and JavaScript to build our sites.</p>
     </div>
     </section>
 </body>
