initial version of index.html complete, completed services and footer sections

--- a/index.html
+++ b/index.html
@@ -66,5 +66,73 @@
         <p>We use HTML5, CSS3, and JavaScript to build our sites.</p>
     </div>
     </section>
+    <section id="about"> <!-- About -->
+    <div class="container">
+        <article class="main-col">
+            <h1 class="page-title">About Us</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus unde illum, harum fugiat, quisquam, placeat nostrum sequi similique impedit deserunt incidunt minus culpa dolores? Explicabo impedit nostrum voluptate molestiae iure.</p>
+            <p class="light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, optio? Minus, esse. Tempore alias consectetur mollitia reprehenderit hic fugit. Fugit aperiam aliquam nulla veritatis placeat ab sed rerum, porro facere.</p>
+        </article>
+
+        <aside class="sidebar">
+            <div class="light">
+                <h3>What We Do</h3>
+                <p>We create the most awe inspiring, top-quality, and award-winning websites using HTML, CSS, & JavaScript which allow business growth to levels never dreamed of! Not for our clients though.</p>
+            </div>
+        </aside>
+    </div>
+    </section>
+    <!-- Services -->
+    <section id="services">
+    <div class="container">
+        <article class="main-col">
+            <h1 class="page-title">Services</h1>
+            <ul>
+            <li>
+                <h3>Website Design</h3>
+                <p>Website Design that focuses on creating a quality design for your website</p>
+                <p>Pricing: $500 - $2,000</p>
+            </li>
+            <li>
+                <h3>Website Maintenance</h3>
+                <p>Website Maintenance that focuses on maintaining your website well</p>
+                <p>Pricing: $200 per month</p>
+            </li>
+            <li>
+                <h3>Website Hosting</h3>
+                <p>Website Hosting that focuses on hosting your website where it can be accessed</p>
+                <p>Pricing: $20 per month</p>
+            </li>
+            </ul>
+        </article>
+
+        <aside class="sidebar">
+            <div class="dark">
+            <h3>Request A Quote</h3>
+            <form class="quote">
+                <div>
+                <label for="name">Name</label>
+                <br>
+                <input type="text" placeholder="Name" id="name" name="name">
+                </div>
+                <div>
+                <label for="email">Email</label>
+                <br>
+                <input type="email" placeholder="Email" id="email" name="email">
+                </div>
+                <div>
+                <label for="message">Message</label>
+                <br>
+                <textarea name="message" id="message" placeholder="Message"></textarea>
+                </div>
+                <button class="btn-1">Send</button>
+            </form>
+            </div>
+        </aside>
+    </div>
+    </section>
+    <footer> <!-- Footer -->
+        <p>Miles's Web Design &#128028;, Copyright &copy; 2022</p>
+    </footer>
 </body>
 </html>
