styled boxes section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="container">
         <h1>Quality web design at no price!™</h1>
         <h3>You cannot purchase these services!</h3>
-        <p>Miles's Web Design is world-class <span id="aside">whatever that means... we exist in the world? That's quite a low bar</span> web design company with a team that creates award-winning websites which promote your brand and increase your revenue to help grow and improve your business, so <i>you</i> can win capitalism.</p>
+        <p>Miles's Web Design is world-class <span id="aside">whatever that means... we exist in the world? That's quite a low bar</span> web design company with a team that creates award-winning websites which promote your brand and increase your revenue to help grow and improve your business, so <span id="italic">you</span> can win capitalism.</p>
     </div>
     </section>
     <section id="newsletter"> <!-- Newsletter -->
@@ -63,8 +63,8 @@
             <i class="fa-brands fa-js"></i>
             <h3>JavaScript Functionality</h3>
         </div>
-        <p>We use HTML5, CSS3, and JavaScript to build our sites.</p>
     </div>
+    <p>We use HTML5, CSS3, and JavaScript to build our sites.</p>
     </section>
     <section id="about"> <!-- About -->
     <div class="container">
